Wrote parser for MSR Trace for LRU

--- a/example.cfg
+++ b/example.cfg
@@ -1,7 +1,7 @@
 cache = {
 	admissionSamples = 8;
 	assoc = 64;
-	capacity = 16384;
+	capacity = 512000;
 };
 
 repl = {
@@ -11,7 +11,7 @@ repl = {
 	ageCoarseningErrorTolerance = 0.01000000000;
 	accsPerInterval = 1024000;
 	ewmaDecay = 0.90000000000;
-	type = "LHD";
+	type = "LRU";
 };
 
 trace = {
